--- a/Views/Student/Create.cshtml
+++ b/Views/Student/Create.cshtml
@@ -15,7 +15,7 @@
                 <select asp-for="GebruikerId" class ="form-control" asp-items="ViewBag.GebruikerId"></select>
             </div>
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Lector">
+                <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Student">
                     <img src="~/img/arrow-left.svg" />
                     <span class="backButton">Terug</span>
                 </a>
