--- a/Views/Student/Delete.cshtml
+++ b/Views/Student/Delete.cshtml
@@ -19,7 +19,7 @@
         </dl>
 
         <form asp-action="Delete" class="form-group d-flex justify-content-between">
-            <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Lector">
+            <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Student">
                 <img src="~/img/arrow-left.svg" />
                 <span class="backButton">Terug</span>
             </a>
