--- a/Views/Vak/Index.cshtml
+++ b/Views/Vak/Index.cshtml
@@ -9,7 +9,7 @@
         <img src="~/img/arrow-left.svg" />
         <span class="backButton">Home</span>
     </a>
-    <h1>Vak</h1>
+    <h1>Vakken</h1>
     <a class="btn btn-outline-success btn-sm viewButton" asp-action="Create">Creëer Vak</a>
 </div>
 
