--- a/Views/Inschrijving/Index.cshtml
+++ b/Views/Inschrijving/Index.cshtml
@@ -20,7 +20,7 @@
                 <tr> <th>Categorieën</th> </tr>
             </thead>
             <tbody class="row">
-                <tr> <td> <vc:navigation-menu onclick="focus"/> </td> </tr>
+                <tr> <td> <vc:navigation-menu/> </td> </tr>
             </tbody>
         </table>
     </div>
