--- a/Views/Inschrijving/Index.cshtml
+++ b/Views/Inschrijving/Index.cshtml
@@ -17,7 +17,7 @@
     <div class="col-2">
         <table id="categories" class="table">
             <thead>
-                <tr> <th>Categorieën</th> </tr>
+                <tr> <th>Filter</th> </tr>
             </thead>
             <tbody class="row">
                 <tr> <td> <vc:navigation-menu/> </td> </tr>
