--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <title>@ViewData["Title"]</title>
-        <link rel="icon" href="~/img/pxl.png">
+        <link rel="icon" href="~/img/pxl.png" />
 
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
@@ -14,6 +14,7 @@
     <body>
         <header>
             <partial name="_HeaderPartial"/>
+            <partial name="_AccountPartial"/>
         </header>
 
         <div class="container">
