--- a/Views/Inschrijving/Index.cshtml
+++ b/Views/Inschrijving/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Overview";
 }
 
-<div class="d-flex justify-content-between mx-2 mb-3">
+<div class="d-flex justify-content-between mx-2 mb-3" onload="highlightButton_InschrPage()">
     <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Home">
         <img src="~/img/arrow-left.svg" />
         <span class="backButton">Home</span>
