--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -26,7 +26,7 @@
                     <img src="~/img/arrow-left.svg" />
                     <span class="backButton">Home</span>
                 </a>
-                <input type="submit" value="Login" class="btn btn-outline-success btn-sm viewButton" />
+                <input type="submit" value="Login" class="btn btn-outline-success btn-sm viewButton" onclick="showToast()" />
             </div>
         </form>
     </div>
