--- a/Views/Shared/_AccountPartial.cshtml
+++ b/Views/Shared/_AccountPartial.cshtml
@@ -3,21 +3,21 @@
 @inject UserManager<IdentityUser> UserManager
 @*@model HogeschoolPXL.Models.ViewModels.LoginViewModel*@
 
-<div class="dropdown dropdown-login">
-    <span> <img src="~/img/profile.png" height="38px" /> </span>
+<div class="dropdown dropdown-login" onload="disableToast_LoginPage()">
+    <span id="loginImg"> <img src="~/img/profile.png" height="38px" /> </span>
     @if (SignInManager.IsSignedIn(User))
     {
-        <div class="dropdown-content dropdown-content-loggedin py-3">
+        <div class="dropdown-content" id="dropdown-login-form" onload="showSnackbar();">
             <span class="dropdown-item">@User.Identity?.Name</span>
-            <hr class="dropdown-divider">
-            <a class="dropdown-item" asp-controller="Account" asp-action="Logout" onclick="showToast()">Logout</a>
+            <hr>
+            <a class="dropdown-item" asp-controller="Account" asp-action="Logout">Logout</a>
         </div>
     }
     else
     {
-        <div class="dropdown-content dropdown-content-loggedout py-3">
-            <form class="dropdown-item" asp-controller="Account" asp-action="LoginForm" method="post">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div> @* Validation *@
+        <div class="dropdown-content" id="dropdown-login-form">
+            <form class="dropdown-item" asp-controller="Account" asp-action="Login" method="post">
+                @* <div asp-validation-summary="ModelOnly" class="text-danger"></div> Validation *@
                 <div class="form-group">
                     <label name="Email" class="control-label">Email</label>
                     <input name="Email" class="form-control" type="email" placeholder="email@example.com" />
@@ -38,18 +38,15 @@
 </div>
 
 @* Toast after a succesfull login *@
-@if (SignInManager.IsSignedIn(User))
+@if (ViewBag.LoginSuccess == 1)
 {
-    <div class="position-fixed bottom-0 end-0 p-3">
-        <div class="toast show" id="toast-dismiss" role="alert">
-            <div class="toast-header">
-                <img src="~/img/green-check.png" height="16" class="rounded me-2">
-                <strong class="me-auto">Succesfull</strong>
-                <button type="button" class="btn-close" onclick="hideToast()" data-bs-dismiss="toast"></button>
-            </div>
-            <div class="toast-body">
-                Logged in as <i>@User.Identity?.Name</i>
-            </div>
-        </div>
+    <div id="snackbar">
+    <div class="toast-header">
+        <img src="~/img/green-check.png" height="16" class="rounded me-2">
+        <strong class="me-auto">Succesfull</strong>
     </div>
+    <div class="toast-body">
+        Logged in as <i>@User.Identity?.Name</i>
+    </div>
+</div>
 }
