--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -4,7 +4,7 @@ html {
     min-height: 100%;
 }
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
 /* Header en Footer */
@@ -37,10 +37,10 @@ footer #footerText {
     border-radius: 50px;
     box-shadow: 0 0 8px lightgrey !important;
 }
-.backArrow /* Arrow */{
+.backArrow /* Arrow */ {
     height: fit-content;
     margin: 6px 0;
-
+    /*  */
     border-radius: 50px;
     box-shadow: 0 0 8px lightgrey;
 }
@@ -63,7 +63,7 @@ footer #footerText {
 #categories a:last-child /* Clear Button */ {
     margin: 5px 0 -5px 0;
     display: block;
-
+    /*  */
     background-color: transparent !important;
     border: 0 solid transparent !important;
 }
@@ -89,7 +89,7 @@ footer #footerText {
     text-align: center;
     margin-bottom: 20px;
     padding-bottom: 20px;
-
+    /*  */
     border-bottom: 1px solid lightgrey;
 }
 
@@ -98,7 +98,7 @@ table {
     padding: 2px 10px;
     border-collapse: separate;
     border-radius: 8px;
-
+    /*  */
     background-color: #fafafa;
     box-shadow: 0 0 20px lightgrey;
 }
@@ -136,31 +136,39 @@ tr:last-child {
 .dropdown /* Dropdown */ {
     position: relative;
     display: inline-block;
-    transition-delay: 100ms;
 }
 .dropdown:hover {
     background-color: #f4f4f4;
+}
+.dropdown span {
+    font-size: 18px;
     cursor: pointer;
+}
+.dropdown:nth-child(1) {
+    padding-bottom: 20px;
 }
 .dropdown-content {
     opacity: 0;
     visibility: hidden;
-    transition: visibility 0s, opacity 0.1s linear;
+    transition: opacity 200ms ease;
     position: absolute;
     z-index: 1;
-    transition-delay: 100ms;
-
-    transform: translate(-10%, 2%);
+    /*  */
     background-color: #fcfcfc;
     min-width: 160px;
     border-radius: 14px;
-    padding: 12px 16px;
+    padding: 8px;
     box-shadow: 0 0 20px lightgrey;
+    transform: translate(-10%, 2%);
+}
+.dropdown-content hr {
+    height: 0.1px;
+    margin: 8px 6px;
+    color: darkgrey;
 }
 .dropdown:hover .dropdown-content {
-    visibility: visible;
     opacity: 1;
-    transition-delay: 100ms;
+    visibility: visible;
 }
 .dropdown-item:focus {
     background-color: grey;
@@ -174,9 +182,6 @@ tr:last-child {
     background-color: #e4e4e4;
     color: black;
 }
-.dropdown span {
-    font-size: 18px;
-}
 header form /* Search Bar */ {
     display: flex;
     margin-left: auto;
@@ -185,13 +190,10 @@ header form * {
     box-shadow: 0 0 12px lightgrey;
     border-radius: 50px !important;
 }
-.dropdown-login {
-    margin-left: auto;
-}
 .dropdown-login .dropdown-content /* Dropdown Login */ {
-    transform: translate(-75%, 6%);
+    transform: translate(-75%, 4%);
+    /*  */
     padding-top: 10px;
-
     border-radius: 20px;
     width: 200px;
 }
@@ -205,30 +207,33 @@ header form * {
     box-shadow: 0 0 16px grey;
     border-radius: 50px;
 }
-.dropdown-content-loggedout .dropdown-item:hover {
-    background-color: initial;
+.dropdown-login #loginImg {
+    padding: 20px 0;
 }
-.dropdown-content-loggedin span {
+.dropdown-login .dropdown-item:first-child {
+    background-color: #fcfcfc;
+}
+.dropdown-login span:nth-child(2) {
     background-color: initial !important;
+    padding-bottom: initial !important;
 }
 
-/* Toast */
-#toast-dismiss {
-    z-index: 2
+/* SnackBar */
+#snackbar {
+    opacity: 0; /* Hide */
+    position: fixed;
+    z-index: 1;
+    bottom: 7rem;
+    margin-left: 75%;
+    /*  */
+    width: 200px;
+    padding: 4px 8px;
+    box-shadow: 0 0 12px lightgrey;
+    border-radius: 20px;
+    transition: opacity 200ms ease;
 }
-.toast {
-    margin-bottom: 5rem;
-    padding: 4px 0 0 4px;
-
-    background-color: #f9f9f9;
-    border-radius: 14px;
-    box-shadow: 0 0 20px lightgrey;
-}
-.toast toast-header {
-    background-color: #f9f9f9;
-}
-.toast-header img {
-    box-shadow: 0 0 10px lightgrey;
+#snackbar img {
+    box-shadow: 0 0 12px grey;
     border-radius: 50px !important;
 }
 
@@ -236,5 +241,8 @@ header form * {
 @media (max-width: 780px) {
     header form {
         display: none;
+    }
+    .dropdown-login {
+        margin-left: auto;
     }
 }
