--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,3 +5,43 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
 </div>
+
+@* Toast after a succesfull login *@
+@{
+    if (ViewBag.Login == "Succeeded")
+    {
+        <div id="snackbar">
+            <div class="toast-header">
+                <img src="~/img/green-check.png" height="16" class="me-2">
+                <strong class="me-auto">Succesfull</strong>
+            </div>
+            <div class="toast-body">
+                Logged in as <i>@User.Identity?.Name</i>
+            </div>
+        </div>
+    }
+    else if (ViewBag.Login == "Failed")
+    {
+        <div id="snackbar">
+            <div class="toast-header">
+                <img src="~/img/red-cross.png" height="16" class="me-2">
+                <strong class="me-auto">Unsuccessfull</strong>
+            </div>
+            <div class="toast-body">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            </div>
+        </div>
+    }
+    else if (ViewBag.Login == "Logout")
+    {
+        <div id="snackbar">
+            <div class="toast-header">
+                <img src="~/img/profile.png" height="16" class="me-2">
+                <strong class="me-auto">Logged Out</strong>
+            </div>
+            <div class="toast-body">
+                Succesfully Logged Out
+            </div>
+        </div>
+    }
+}
