--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -63,7 +63,6 @@ footer #footerText {
 #categories a:last-child /* Clear Button */ {
     margin: 5px 0 -5px 0;
     display: block;
-    /*  */
     background-color: transparent !important;
     border: 0 solid transparent !important;
 }
@@ -89,16 +88,16 @@ footer #footerText {
     text-align: center;
     margin-bottom: 20px;
     padding-bottom: 20px;
-    /*  */
     border-bottom: 1px solid lightgrey;
 }
 
 /* Table */
 table {
-    padding: 2px 10px;
+    /* Positioning */
     border-collapse: separate;
+    /* Styling */
     border-radius: 8px;
-    /*  */
+    padding: 2px 10px;
     background-color: #fafafa;
     box-shadow: 0 0 20px lightgrey;
 }
@@ -148,12 +147,13 @@ tr:last-child {
     padding-bottom: 20px;
 }
 .dropdown-content {
+    /* Positioning */
     opacity: 0;
     visibility: hidden;
     transition: opacity 200ms ease;
     position: absolute;
     z-index: 1;
-    /*  */
+    /* Styling */
     background-color: #fcfcfc;
     min-width: 160px;
     border-radius: 14px;
@@ -192,7 +192,7 @@ header form * {
 }
 .dropdown-login .dropdown-content /* Dropdown Login */ {
     transform: translate(-75%, 4%);
-    /*  */
+    /* Styling */
     padding-top: 10px;
     border-radius: 20px;
     width: 200px;
@@ -221,11 +221,13 @@ header form * {
 /* SnackBar */
 #snackbar {
     opacity: 0; /* Hide */
-    position: fixed;
+    position: absolute;
     z-index: 1;
-    bottom: 7rem;
-    /*  */
+    right: 0;
+    bottom: 0;
+    /* Styling */
     width: 200px;
+    margin: 88px 20px;
     padding: 4px 8px;
     background-color: #f4f4f4;
     box-shadow: 0 0 12px lightgrey;
