--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -22,11 +22,8 @@
             </div>
 
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Home">
-                    <img src="~/img/arrow-left.svg" />
-                    <span class="backButton">Home</span>
-                </a>
-                <input type="submit" value="Login" class="btn btn-outline-success btn-sm viewButton" onclick="showToast()" />
+                <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Register" asp-controller="Account">Register</a>
+                <input type="submit" value="Login" class="btn btn-outline-success btn-sm viewButton" />
             </div>
         </form>
     </div>
