--- a/Views/Shared/_AccountPartial.cshtml
+++ b/Views/Shared/_AccountPartial.cshtml
@@ -33,7 +33,7 @@
                     @*<span asp-validation-for="Password" class="text-danger"></span>*@
                 </div>
                 <div class="form-group d-flex justify-content-between">
-                    <a class="btn btn-outline-primary btn-sm viewButton" asp-controller="Account" asp-action="Register">Registreer</a>
+                    <a class="btn btn-outline-primary btn-sm viewButton" asp-controller="Account" asp-action="Register">Registreren?</a>
                     <input type="submit" value="Log in" class="btn btn-outline-success btn-sm viewButton" />
                 </div>
             </form>
