Bug fixes and change in code format to read easier and have a better visual experience in the code.

--- a/Views/AcademieJaar/Edit.cshtml
+++ b/Views/AcademieJaar/Edit.cshtml
@@ -10,19 +10,19 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="AcademiejaarId" />
+            <input type="hidden" asp-for="AcademiejaarId"/>
             <div class="form-group">
                 <label asp-for="Datum" class="control-label"></label>
-                <input asp-for="Datum" class="form-control" />
+                <input asp-for="Datum" class="form-control"/>
                 <span asp-validation-for="Datum" class="text-danger"></span>
             </div>
 
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-outline-secondary btn-sm backArrow" href="javascript:history.back()">
-                    <img src="~/img/arrow-left.svg" />
-                    <span class="backButton">Terug</span>
+                <a class="btn btn-sm backArrow" href="javascript:history.back()">
+                    <img src="~/img/arrow-left-black.png" height="16"/>
+                    <span >Terug</span>
                 </a>
-                <input type="submit" value="Update Academiejaar" class="btn btn-outline-success btn-sm viewButton" />
+                <input type="submit" value="Update Academiejaar" class="btn btn-outline-success btn-sm viewButton"/>
             </div>
         </form>
     </div>
