--- a/Views/AcademieJaar/Details.cshtml
+++ b/Views/AcademieJaar/Details.cshtml
@@ -18,9 +18,9 @@
         </dl>
 
         <div class="form-group d-flex justify-content-between">
-            <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Academiejaar">
-                <img src="~/img/arrow-left.svg" />
-                <span class="backButton">Terug</span>
+            <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Academiejaar">
+                <img src="~/img/arrow-left-black.png" height="16"/>
+                <span >Terug</span>
             </a>
             <a asp-action="Edit" asp-route-id="@Model?.AcademiejaarId" class="btn btn-outline-success btn-sm viewButton">Edit Academiejaar</a>
         </div>
