--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -22,8 +22,8 @@
             </div>
 
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-outline-primary btn-sm viewButton" asp-action="Register" asp-controller="Account">Registreer</a>
-                <input type="submit" value="Login" class="btn btn-outline-success btn-sm viewButton" />
+                <a class="btn btn-sm backArrow" asp-action="Register" asp-controller="Account">Registreer</a>
+                <input type="submit" value="Login" class="btn btn-outline-success btn-sm viewButton"/>
             </div>
         </form>
     </div>
