--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -21,11 +21,11 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Home">
-                    <img src="~/img/arrow-left.svg" />
-                    <span class="backButton">Home</span>
+                <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Home">
+                    <img src="~/img/arrow-left-black.png" height="16"/>
+                    <span>Home</span>
                 </a>
-                <input type="submit" value="Registreer" class="btn btn-outline-success btn-sm viewButton" />
+                <input type="submit" value="Registreer" class="btn btn-outline-success btn-sm viewButton"/>
             </div>
         </form>
     </div>
