--- a/Views/Gebruiker/Delete.cshtml
+++ b/Views/Gebruiker/Delete.cshtml
@@ -29,11 +29,11 @@
             </dd>
         </dl>
         <form asp-action="Delete" class="form-group d-flex justify-content-between">
-            <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Gebruiker">
-                <img src="~/img/arrow-left.svg" />
-                <span class="backButton">Terug</span>
+            <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Gebruiker">
+                <img src="~/img/arrow-left-black.png" height="16"/>
+                <span >Terug</span>
             </a>
-            <input type="hidden" asp-for="GebruikerId" />
+            <input type="hidden" asp-for="GebruikerId"/>
             <input type="submit" value="Verwijder" class="btn btn-outline-danger btn-sm viewButton"/>
         </form>
     </div>
