--- a/Views/Gebruiker/Edit.cshtml
+++ b/Views/Gebruiker/Edit.cshtml
@@ -10,28 +10,28 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="GebruikerId" />
+            <input type="hidden" asp-for="GebruikerId"/>
             <div class="form-group">
                 <label asp-for="Voornaam" class="control-label"></label>
-                <input asp-for="Voornaam" class="form-control" />
+                <input asp-for="Voornaam" class="form-control"/>
                 <span asp-validation-for="Voornaam" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Naam" class="control-label"></label>
-                <input asp-for="Naam" class="form-control" />
+                <input asp-for="Naam" class="form-control"/>
                 <span asp-validation-for="Naam" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
+                <input asp-for="Email" class="form-control"/>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-outline-secondary btn-sm backArrow" href="javascript:history.back()">
-                    <img src="~/img/arrow-left.svg" />
-                    <span class="backButton">Terug</span>
+                <a class="btn btn-sm backArrow" href="javascript:history.back()">
+                    <img src="~/img/arrow-left-black.png" height="16"/>
+                    <span >Terug</span>
                 </a>
-                <input type="submit" value="Update Gebruiker" class="btn btn-outline-success btn-sm viewButton" />
+                <input type="submit" value="Update Gebruiker" class="btn btn-outline-success btn-sm viewButton"/>
             </div>
         </form>
     </div>
