--- a/Views/Handboek/Create.cshtml
+++ b/Views/Handboek/Create.cshtml
@@ -12,31 +12,31 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Titel" class="control-label"></label>
-                <input asp-for="Titel" class="form-control" />
+                <input asp-for="Titel" class="form-control"/>
                 <span asp-validation-for="Titel" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Kostprijs" class="control-label"></label>
-                <input asp-for="Kostprijs" class="form-control" />
+                <input asp-for="Kostprijs" class="form-control"/>
                 <span asp-validation-for="Kostprijs" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="UitgifteDatum" class="control-label"></label>
-                <input asp-for="UitgifteDatum" class="form-control" />
+                <input asp-for="UitgifteDatum" class="form-control"/>
                 <span asp-validation-for="UitgifteDatum" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Afbeelding" class="control-label"></label>
-                <input asp-for="Afbeelding" class="form-control" />
+                <input asp-for="Afbeelding" class="form-control"/>
                 <span asp-validation-for="Afbeelding" class="text-danger"></span>
             </div>
 
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Handboek">
-                    <img src="~/img/arrow-left.svg" />
-                    <span class="backButton">Terug</span>
+                <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Handboek">
+                    <img src="~/img/arrow-left-black.png" height="16"/>
+                    <span >Terug</span>
                 </a>
-                <input type="submit" value="Creëer Handboek" class="btn btn-outline-success btn-sm viewButton" />
+                <input type="submit" value="Creëer Handboek" class="btn btn-outline-success btn-sm viewButton"/>
             </div>
         </form>
     </div>
