--- a/Views/Handboek/Edit.cshtml
+++ b/Views/Handboek/Edit.cshtml
@@ -10,33 +10,33 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="HandboekId" />
+            <input type="hidden" asp-for="HandboekId"/>
             <div class="form-group">
                 <label asp-for="Titel" class="control-label"></label>
-                <input asp-for="Titel" class="form-control" />
+                <input asp-for="Titel" class="form-control"/>
                 <span asp-validation-for="Titel" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Kostprijs" class="control-label"></label>
-                <input asp-for="Kostprijs" class="form-control" />
+                <input asp-for="Kostprijs" class="form-control"/>
                 <span asp-validation-for="Kostprijs" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="UitgifteDatum" class="control-label"></label>
-                <input asp-for="UitgifteDatum" class="form-control" />
+                <input asp-for="UitgifteDatum" class="form-control"/>
                 <span asp-validation-for="UitgifteDatum" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Afbeelding" class="control-label"></label>
-                <input asp-for="Afbeelding" class="form-control" />
+                <input asp-for="Afbeelding" class="form-control"/>
                 <span asp-validation-for="Afbeelding" class="text-danger"></span>
             </div>
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-outline-secondary btn-sm backArrow" href="javascript:history.back()">
-                    <img src="~/img/arrow-left.svg" />
-                    <span class="backButton">Terug</span>
+                <a class="btn btn-sm backArrow" href="javascript:history.back()">
+                    <img src="~/img/arrow-left-black.png" height="16"/>
+                    <span >Terug</span>
                 </a>
-                <input type="submit" value="Update Handboek" class="btn btn-outline-success btn-sm viewButton" />
+                <input type="submit" value="Update Handboek" class="btn btn-outline-success btn-sm viewButton"/>
             </div>
         </form>
     </div>
