--- a/Views/Inschrijving/Create.cshtml
+++ b/Views/Inschrijving/Create.cshtml
@@ -24,11 +24,11 @@
             </div>
 
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Inschrijving">
-                    <img src="~/img/arrow-left.svg" />
-                    <span class="backButton">Terug</span>
+                <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Inschrijving">
+                    <img src="~/img/arrow-left-black.png" height="16"/>
+                    <span >Terug</span>
                 </a>
-                <input type="submit" value="Creëer Inschrijving" class="btn btn-outline-success btn-sm viewButton" />
+                <input type="submit" value="Creëer Inschrijving" class="btn btn-outline-success btn-sm viewButton"/>
             </div>
         </form>
     </div>
