--- a/Views/Inschrijving/Details.cshtml
+++ b/Views/Inschrijving/Details.cshtml
@@ -30,9 +30,9 @@
             </dd>
         </dl>
         <div class="form-group d-flex justify-content-between">
-            <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Inschrijving">
-                <img src="~/img/arrow-left.svg" />
-                <span class="backButton">Terug</span>
+            <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Inschrijving">
+                <img src="~/img/arrow-left-black.png" height="16"/>
+                <span >Terug</span>
             </a>
             <a asp-action="Edit" asp-route-id="@Model?.InschrijvingId" class="btn btn-outline-success btn-sm viewButton">Edit Lector</a>
         </div>
