--- a/Views/Inschrijving/Index.cshtml
+++ b/Views/Inschrijving/Index.cshtml
@@ -5,9 +5,9 @@
 }
 
 <div class="d-flex justify-content-between mx-2 mb-3" onload="highlightButton_InschrPage()">
-    <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Home">
-        <img src="~/img/arrow-left.svg" />
-        <span class="backButton">Home</span>
+    <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Home">
+        <img src="~/img/arrow-left-black.png" height="16"/>
+        <span>Home</span>
     </a>
     <h1>Inschrijvingen</h1>
     <a class="btn btn-outline-success btn-sm viewButton" asp-action="Create">Creëer Inschrijving</a>
@@ -42,7 +42,8 @@
                 </tr>
             </thead>
             <tbody>
-            @foreach (var item in Model) {
+            @foreach (var item in Model)
+            {
                 <tr>
                     <td>
                         @Html.DisplayFor(modelItem => item.Student.Gebruiker.Voornaam) 
