--- a/Views/Lector/Details.cshtml
+++ b/Views/Lector/Details.cshtml
@@ -24,9 +24,9 @@
             </dd>
         </dl>
         <div class="form-group d-flex justify-content-between">
-            <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Lector">
-                <img src="~/img/arrow-left.svg" />
-                <span class="backButton">Terug</span>
+            <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Lector">
+                <img src="~/img/arrow-left-black.png" height="16"/>
+                <span >Terug</span>
             </a>
             <a asp-action="Edit" asp-route-id="@Model?.LectorId" class="btn btn-outline-success btn-sm viewButton">Edit Lector</a>
         </div>
