--- a/Views/Shared/_AccountPartial.cshtml
+++ b/Views/Shared/_AccountPartial.cshtml
@@ -6,7 +6,7 @@
 <div class="dropdown dropdown-login" onload="disableToast_LoginPage()">
     <span id="loginImg">
         <a asp-controller="Account" asp-action="Login">
-            <img src="~/img/profile.png" height="38px"/>
+            <img src="~/img/profile.png" height="38"/>
         </a>
     </span>
     @if (SignInManager.IsSignedIn(User))
@@ -24,17 +24,17 @@
                 @*<div asp-validation-summary="All" class="text-danger"></div>*@
                 <div class="form-group">
                     <label name="Email" class="control-label">Email</label>
-                    <input name="Email" class="form-control" type="email" placeholder="email@example.com" />
+                    <input name="Email" class="form-control" type="email" placeholder="email@example.com"/>
                     @*<span asp-validation-for="Email" class="text-danger"></span>*@
                 </div>
                 <div class="form-group">
                     <label name="Password" class="control-label">Password</label>
-                    <input name="Password" class="form-control" type="password" placeholder="Wachtwoord" />
+                    <input name="Password" class="form-control" type="password" placeholder="Wachtwoord"/>
                     @*<span asp-validation-for="Password" class="text-danger"></span>*@
                 </div>
                 <div class="form-group d-flex justify-content-between">
-                    <a class="btn btn-outline-primary btn-sm viewButton" asp-controller="Account" asp-action="Register">Registreren?</a>
-                    <input type="submit" value="Log in" class="btn btn-outline-success btn-sm viewButton" />
+                    <a class="btn btn-sm backArrow" asp-controller="Account" asp-action="Register">Registreren</a>
+                    <input type="submit" value="Log in" class="btn btn-outline-success btn-sm viewButton"/>
                 </div>
             </form>
         </div>
