--- a/Views/Student/Create.cshtml
+++ b/Views/Student/Create.cshtml
@@ -15,11 +15,11 @@
                 <select asp-for="GebruikerId" class ="form-control" asp-items="ViewBag.GebruikerId"></select>
             </div>
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Student">
-                    <img src="~/img/arrow-left.svg" />
-                    <span class="backButton">Terug</span>
+                <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Student">
+                    <img src="~/img/arrow-left-black.png" height="16"/>
+                    <span >Terug</span>
                 </a>
-                <input type="submit" value="Creëer Student" class="btn btn-outline-success btn-sm viewButton" />
+                <input type="submit" value="Creëer Student" class="btn btn-outline-success btn-sm viewButton"/>
             </div>
         </form>
     </div>
