--- a/Views/Student/Details.cshtml
+++ b/Views/Student/Details.cshtml
@@ -11,9 +11,9 @@
 @if (Model.Inschrijving != null)
 {
     <div class="form-group d-flex justify-content-center">
-        <a class="btn btn-outline-secondary btn-sm backArrow mx-1" asp-action="Index" asp-controller="Student">
-            <img src="~/img/arrow-left.svg" />
-            <span class="backButton">Terug</span>
+        <a class="btn btn-sm backArrow mx-1" asp-action="Index" asp-controller="Student">
+            <img src="~/img/arrow-left-black.png" height="16"/>
+            <span >Terug</span>
         </a>
         <a asp-action="Edit" asp-route-id="@Model?.Inschrijving.Student.StudentId" class="btn btn-outline-success btn-sm viewButton mx-1">Edit Student</a>
     </div>
