--- a/Views/Vak/Details.cshtml
+++ b/Views/Vak/Details.cshtml
@@ -29,9 +29,9 @@
             </dd>
 
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Vak">
-                    <img src="~/img/arrow-left.svg" />
-                    <span class="backButton">Terug</span>
+                <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Vak">
+                    <img src="~/img/arrow-left-black.png" height="16"/>
+                    <span >Terug</span>
                 </a>
                 <a asp-action="Edit" asp-route-id="@Model?.VakId" class="btn btn-outline-success btn-sm viewButton">Edit Vak</a>
             </div>
