--- a/Views/Vak/Edit.cshtml
+++ b/Views/Vak/Edit.cshtml
@@ -10,15 +10,15 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="VakId" />
+            <input type="hidden" asp-for="VakId"/>
             <div class="form-group">
                 <label asp-for="VakNaam" class="control-label"></label>
-                <input asp-for="VakNaam" class="form-control" />
+                <input asp-for="VakNaam" class="form-control"/>
                 <span asp-validation-for="VakNaam" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Studiepunten" class="control-label"></label>
-                <input asp-for="Studiepunten" class="form-control" />
+                <input asp-for="Studiepunten" class="form-control"/>
                 <span asp-validation-for="Studiepunten" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -27,11 +27,11 @@
                 <span asp-validation-for="HandboekId" class="text-danger"></span>
             </div>
             <div class="form-group d-flex justify-content-between">
-                <a class="btn btn-outline-secondary btn-sm backArrow" href="javascript:history.back()">
-                    <img src="~/img/arrow-left.svg" />
-                    <span class="backButton">Terug</span>
+                <a class="btn btn-sm backArrow" href="javascript:history.back()">
+                    <img src="~/img/arrow-left-black.png" height="16"/>
+                    <span >Terug</span>
                 </a>
-                <input type="submit" value="Update Vak" class="btn btn-outline-success btn-sm viewButton" />
+                <input type="submit" value="Update Vak" class="btn btn-outline-success btn-sm viewButton"/>
             </div>
         </form>
     </div>
