--- a/Views/VakLector/Index.cshtml
+++ b/Views/VakLector/Index.cshtml
@@ -5,9 +5,9 @@
 }
 
 <div class="d-flex justify-content-between mx-2 mb-3">
-    <a class="btn btn-outline-secondary btn-sm backArrow" asp-action="Index" asp-controller="Home">
-        <img src="~/img/arrow-left.svg" />
-        <span class="backButton">Home</span>
+    <a class="btn btn-sm backArrow" asp-action="Index" asp-controller="Home">
+        <img src="~/img/arrow-left-black.png" height="16"/>
+        <span>Home</span>
     </a>
     <h1>VakLector</h1>
     <a class="btn btn-outline-success btn-sm viewButton" asp-action="Create">Creëer VakLector</a>
@@ -26,7 +26,8 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model)
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Lector.Gebruiker.Voornaam) 
@@ -41,6 +42,6 @@
                 <a class="btn btn-outline-danger btn-sm viewButton" asp-action="Delete" asp-route-id="@item.VakLectorId">Delete</a>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
