--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -23,7 +23,7 @@
 
             <div class="form-group d-flex justify-content-between">
                 <a class="btn btn-sm backArrow" asp-action="Register" asp-controller="Account">Registreer</a>
-                <input type="submit" value="Login" class="btn btn-outline-success btn-sm viewButton"/>
+                <input type="submit" value="Inloggen" class="btn btn-outline-success btn-sm viewButton" />
             </div>
         </form>
     </div>
