--- a/Views/Shared/_AccountPartial.cshtml
+++ b/Views/Shared/_AccountPartial.cshtml
@@ -34,7 +34,7 @@
                 </div>
                 <div class="form-group d-flex justify-content-between">
                     <a class="btn btn-sm backArrow" asp-controller="Account" asp-action="Register">Registreren</a>
-                    <input type="submit" value="Log in" class="btn btn-outline-success btn-sm viewButton"/>
+                    <input type="submit" value="Inloggen" class="btn btn-outline-success btn-sm viewButton"/>
                 </div>
             </form>
         </div>
